<resources>
    <string name="app_name">contactsproject</string>
    <string name="contact_quantity">Contact Quantity</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_id">Contact ID</string>
    <string name="not_assigned">Not assigned</string>
    <string name="delete">Delete</string>
    <string name="find">Find</string>
    <string name="add">Add</string>
    <string name="textview">TextView</string>
    <string name="asc">ASC</string>
    <string name="desc">DESC</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_phone">Enter Phone</string>
</resources>